# Egoist

./: .gitignore  CMakeLists.txt  LICENSE  README.md
academics/: README.md
academics/Final Projects/FinalProjectAlgo/: data.h  dijkstra.cpp  function.h  main.cpp  menu.cpp  passenger.cpp  routeSpecs.cpp
academics/Final Projects/SingleSourceCodes/: firstYear.cpp
academics/Final Projects/UTS/: README.md  index.html  package-lock.json  package.json
academics/Final Projects/UTS/src/: App.jsx  styles.css
competitiveProgramming/: README.md
competitiveProgramming/C++/: A-Bit++.cpp  A-Team.cpp  A-Watermelon.cpp  A-WayTooLongWords.cpp  ABflipping.cpp  andrew.cpp  bits.cpp  bitstrings.cpp  weirdAlgorithm.cpp
gameDevelopment/: README.md
mobileProgramming/: README.md
personalProject/: textAIChecker.py
personalProject/textAIChecker/: requirements.txt  textAIChecker.py
visualGraphics/: testing.cpp
webDevelopment/: README.md
